# datasette-cron

./: .gitignore  CLAUDE.md  Justfile  NOTES.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
datasette_cron/: __init__.py  hookspecs.py  internal_db.py  internal_migrations.py  models.py  page_data.py  router.py  scheduler.py  schedules.py
datasette_cron/routes/: api.py  pages.py
datasette_cron/templates/: cron_base.html
frontend/: api.d.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: store.svelte.ts
frontend/src/page_data/: DetailPageData.types.ts  DetailPageData_schema.json  IndexPageData.types.ts  IndexPageData_schema.json  load.ts
frontend/src/pages/detail/: DetailPage.svelte  index.ts
frontend/src/pages/index/: IndexPage.svelte  index.ts
samples/: datasette_cron_bluesky_feed.py  datasette_cron_debug.py  datasette_cron_federal_register.py
scripts/: typegen-pagedata.py
tests/: conftest.py  test_cron.py  test_end_to_end.py  test_persistent_db.py  test_plugin_hook_flow.py  test_plugins_dir.py  test_router_debug.py  test_routes.py  test_sample_plugin.py  test_schedules.py
